<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MapActivity">


    <fragment xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/map"
        tools:context=".MapActivity"
        android:name="com.google.android.gms.maps.SupportMapFragment" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp"
        android:elevation="10dp"
        android:id="@+id/relLayout1"
        android:background="@drawable/white_border">

        <ImageView
            android:layout_width="15dp"
            android:layout_height="15dp"
            android:id="@+id/ic_magnify"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="4dp"
            android:src="@drawable/ic_magnify"
            android:layout_marginEnd="4dp"
            android:layout_marginStart="10dp"
            android:contentDescription="@string/magnify_icon" />

        <Button
            android:layout_width="wrap_content"
            android:background="@android:color/transparent"
            android:layout_height="wrap_content"
            android:text="@string/avtivity_map_skip_step"
            android:id="@+id/skip_button"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_toRightOf="@+id/ic_magnify"
            android:layout_centerVertical="true"
            android:textSize="15sp"
            android:maxLines="1"
            android:textColor="#000"
            android:id="@+id/map_search_et"
            android:background="@null"
            android:hint="@string/enter_address_city_or_place_name"
            android:imeOptions="actionSearch"
            android:layout_toEndOf="@+id/ic_magnify" />
    </RelativeLayout>

</RelativeLayout>