<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/app_bar_layout"
        android:layout_width="match_parent"
        android:layout_height="192dp"
        android:background="?colorPrimary">

        <android.support.design.widget.CollapsingToolbarLayout
            android:id="@+id/collapsing_toolbar_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:expandedTitleMarginStart="18dp"
            app:contentScrim="?attr/colorPrimary"
            app:layout_scrollFlags="scroll|exitUntilCollapsed">


            <android.support.v7.widget.Toolbar
                app:titleTextColor="#FFFFFF"
                android:id="@+id/detail_toolbar"
                android:layout_width="match_parent"
                android:layout_height="?actionBarSize"
                app:contentInsetStart="18dp"
                app:layout_scrollFlags="scroll|enterAlways"

                />


        </android.support.design.widget.CollapsingToolbarLayout>
    </android.support.design.widget.AppBarLayout>

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:baselineAligned="false"
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:orientation="horizontal">

                <FrameLayout
                    android:layout_width="wrap_content"
                    android:layout_weight="1"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:contentDescription="@string/detail_view_personicon"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/artist"
                        android:layout_gravity="center" />
                </FrameLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_weight="2"
                    android:orientation="vertical"
                    android:layout_height="match_parent">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="2"
                        android:id="@+id/name_details"
                        android:textColor="@color/primaryText" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        android:textColor="@color/secondaryText"
                        android:text="@string/detail_view_artistname" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="@color/colorPrimaryDark" />


                </LinearLayout>


            </LinearLayout>


            <LinearLayout
                android:baselineAligned="false"
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:orientation="horizontal">

                <FrameLayout
                    android:layout_width="wrap_content"
                    android:layout_weight="1"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:contentDescription="@string/detail_view_placeicon"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/hostn"
                        android:layout_gravity="center" />
                </FrameLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_weight="2"
                    android:orientation="vertical"
                    android:layout_height="match_parent">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="2"
                        android:id="@+id/place_details"
                        android:textColor="@color/primaryText" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        android:textColor="@color/secondaryText"
                        android:text="@string/detail_view_host" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="@color/colorPrimaryDark" />


                </LinearLayout>


            </LinearLayout>

            <LinearLayout
                android:baselineAligned="false"
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:orientation="horizontal">

                <FrameLayout
                    android:layout_width="wrap_content"
                    android:layout_weight="1"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/datetim"
                        android:contentDescription="@string/detail_view_calendaricon"
                        android:layout_gravity="center" />
                </FrameLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_weight="2"
                    android:orientation="vertical"
                    android:layout_height="match_parent">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="2"
                        android:id="@+id/date_details"
                        android:textColor="@color/primaryText" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        android:textColor="@color/secondaryText"
                        android:text="@string/detail_view_time" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="@color/colorPrimaryDark" />


                </LinearLayout>


            </LinearLayout>

            <LinearLayout
                android:baselineAligned="false"
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:orientation="horizontal">

                <FrameLayout
                    android:layout_width="wrap_content"
                    android:layout_weight="1"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:contentDescription="@string/detail_view_dollaricon"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/price"
                        android:layout_gravity="center" />
                </FrameLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_weight="2"
                    android:orientation="vertical"
                    android:layout_height="match_parent">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="2"
                        android:id="@+id/price_details"
                        android:textColor="@color/primaryText" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        android:text="@string/detail_view_entrancefee"
                        android:textColor="@color/secondaryText" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="@color/colorPrimaryDark" />


                </LinearLayout>


            </LinearLayout>

            <LinearLayout
                android:baselineAligned="false"
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:orientation="horizontal">

                <FrameLayout
                    android:layout_width="wrap_content"
                    android:layout_weight="1"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:contentDescription="@string/detail_view_noteicon"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/genre"
                        android:layout_gravity="center" />
                </FrameLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_weight="2"
                    android:orientation="vertical"
                    android:layout_height="match_parent">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="2"
                        android:id="@+id/genre_details"
                        android:textColor="@color/primaryText" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        android:textColor="@color/secondaryText"
                        android:text="@string/detail_view_genre" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="@color/colorPrimaryDark" />


                </LinearLayout>


            </LinearLayout>

            <LinearLayout
                android:baselineAligned="false"
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:orientation="horizontal">

                <FrameLayout
                    android:layout_width="wrap_content"
                    android:layout_weight="1"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:contentDescription="@string/detail_viewphoneicon"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/phone"
                        android:layout_gravity="center" />
                </FrameLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_weight="2"
                    android:orientation="vertical"
                    android:layout_height="match_parent">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="2"
                        android:id="@+id/phone_detail"
                        android:textColor="@color/primaryText" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        android:textColor="@color/secondaryText"
                        android:text="@string/detail_view_phone" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="@color/colorPrimaryDark" />


                </LinearLayout>


            </LinearLayout>

            <LinearLayout
                android:baselineAligned="false"
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:orientation="horizontal">

                <FrameLayout
                    android:layout_width="wrap_content"
                    android:layout_weight="1"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:contentDescription="@string/detail_viewmarkericon"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/address"
                        android:layout_gravity="center" />
                </FrameLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_weight="2"
                    android:orientation="vertical"
                    android:layout_height="match_parent">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="2"
                        android:id="@+id/address_detail"
                        android:textColor="@color/primaryText" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        android:textColor="@color/secondaryText"
                        android:text="@string/detail_view_address" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="@color/colorPrimaryDark" />


                </LinearLayout>


            </LinearLayout>


            <Button
                android:layout_marginTop="10dp"
                android:layout_width="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_height="wrap_content"
                android:id="@+id/make_widget"
                android:text="@string/detail_view_widgetbutton" />


            <TextView
                android:layout_marginLeft="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/note_opening"
                android:textSize="16sp"
                android:textColor="@color/secondaryText"
                android:layout_marginTop="10dp"
                android:layout_marginStart="10dp" />

            <TextView
                android:layout_marginLeft="10dp"
                android:layout_width="wrap_content"
                android:textColor="@color/primaryText"
                android:layout_height="wrap_content"
                android:id="@+id/personalmessagedetail"
                android:textSize="20sp"
                android:textStyle="italic"
                android:layout_marginStart="10dp" />
        </LinearLayout>

    </android.support.v4.widget.NestedScrollView>

</android.support.design.widget.CoordinatorLayout>